--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/code,linux,django,python
-# Edit at https://www.gitignore.io/?templates=code,linux,django,python
+# Created by https://www.gitignore.io/api/code,django,python
+# Edit at https://www.gitignore.io/?templates=code,django,python
 
 ### Code ###
 .vscode/*
@@ -142,21 +142,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-### Linux ###
-*~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
 ### Python ###
 # Byte-compiled / optimized / DLL files
 
@@ -212,4 +197,5 @@ dmypy.json
 
 # Pyre type checker
 
-# End of https://www.gitignore.io/api/code,linux,django,python
+# End of https://www.gitignore.io/api/code,django,python
+
