--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 Django==2.2.1
+django-auditlog==0.4.5
+django-jsonfield==1.2.0
+django-model-utils==3.1.2
 entrypoints==0.3
 flake8==3.7.7
 mccabe==0.6.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-dateutil==2.6.0
 pytz==2019.1
+six==1.12.0
 sqlparse==0.3.0
