--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-model-utils==3.1.2
 entrypoints==0.3
 flake8==3.7.7
 mccabe==0.6.1
+Pillow==6.0.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
 python-dateutil==2.6.0
