--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+autopep8==1.4.4
 Django==2.2.1
 django-auditlog==0.4.5
+django-filter==2.1.0
 django-jsonfield==1.2.0
 django-model-utils==3.1.2
+djangorestframework==3.9.4
 entrypoints==0.3
 flake8==3.7.7
+Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.0.0
 pycodestyle==2.5.0
