--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ django-jsonfield==1.2.0
 django-model-utils==3.1.2
 djangorestframework==3.9.4
 entrypoints==0.3
+django-webpack-loader==0.6.0
 
 Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.0.0
 psycopg2==2.8.2
+psycopg2-binary==2.8.3
 pycodestyle==2.5.0
 pyflakes==2.1.1
 python-dateutil==2.6.0
